created a entry html file

--- a/index.html
+++ b/index.html
@@ -7,7 +7,11 @@
   <title>Figma - Unofficial Electron App</title>
 </head>
 <body>
-  <div id="root-view"></div>
+  <div id="root-view">
+
+    <h1>Fill this up with your content!</h1>
+
+  </div>
 
   <noscript>Your system does not support JavaScript!</noscript>
 </body>
